--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import 'animation';
+
 $main: #06d6a0; // #32f, #f32c
 $black: #343a40;
 $error: #e63946;
@@ -10,11 +12,13 @@ $error: #e63946;
 .title {
   font-weight: 900 !important;
   letter-spacing: 1px;
+  animation: appear-top 0.75s ease-in-out;
 }
 
 .desc {
   font-size: 1rem;
   opacity: 0.75;
+  animation: appear-bottom 0.75s ease-in-out;
 }
 
 .btn-primary {
@@ -29,6 +33,8 @@ $error: #e63946;
   font-size: 17px;
   letter-spacing: 0.5px;
 
+  animation: appear-left 0.75s ease-in-out;
+
   &:hover {
     background: lighten($main, 5);
   }
@@ -39,6 +45,8 @@ $error: #e63946;
   position: absolute;
   top: 50px;
   left: 50px;
+
+  animation: appear-top 0.75s ease-in-out;
 
   border-radius: 5px;
 
@@ -68,6 +76,8 @@ $error: #e63946;
   flex-direction: row-reverse;
   box-shadow: 0 5px 15px rgba($black, 0.15);
   overflow: visible;
+
+  animation: appear-left 0.75s ease-in-out;
 
   .hashtag {
     position: relative;
