--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,11 @@ body {
   overflow: hidden;
 }
 
+.line {
+  font-weight: 900;
+  text-decoration: underline;
+}
+
 .title {
   font-weight: 900 !important;
   letter-spacing: 1px;
@@ -181,12 +186,13 @@ body {
   }
 
   .title {
+    font-family: Roboto Mono, sans-serif;
     font-size: 5rem;
     text-transform: uppercase;
   }
 
   .desc {
     opacity: 1;
-    font-weight: 900;
+    font-weight: 400;
   }
 }
